# solidworks-mcp

solidworks/: .gitignore  README.md  SKILL.md  pyproject.toml
solidworks/solidworks_mcp/: __init__.py  __main__.py  server.py
