[project]
name = "solidworks-mcp"
version = "0.1.0"
description = "Professional SolidWorks MCP server for local AI assistants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
solidworks-mcp = "solidworks_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
virtual_venvs = [".venv"]

[tool.uvx]
dependencies = ["solidworks-mcp"]
